# wikidata-edithist-refinement

./: .env-sample  .gitignore  LICENSE  README.md  docker-compose-fetching.yml  docker-compose-mongo.yml  docker-compose-notebook.yml  docker-compose.yml  requirements.txt
config/: init-mongo.sh  mongod.conf
data/: README.md
data/pagerank/: README.md
notebooks/: (RUST)Sophia_Test.ipynb  0_Data_Indexing.ipynb  1_Data_Fetching.ipynb  2_Data_Exploration.ipynb  3_Edit_History_Systems.ipynb  3_KG_Refinement_Systems.ipynb  4_Model_Evaluation.ipynb  Dockerfile  Q42.json  README.md  Untitled.ipynb  Untitled1.ipynb  requirements.txt
notebooks/config/: convkb_config.json  mure_config.json  rotate_config.json  transe_config.json  transr_config.json  tucker_config.json
notebooks/output/2_data_exploration/: edit_states_graph.html
notebooks/output/2_data_exploration/charts/: 0_histogram.html  0_sample.html  c2_corr.html  c3_corr.html  c3_corr_matrix.html  c_1_ops.html  c_1_ops_paper.html  d_prop_count.html  e2_pure_prop_created.html  e2_pure_prop_deleted.html  e2_pure_prop_deleted_big_city.html  e2_pure_prop_deleted_human.html  e2_pure_prop_deleted_sovereign_state.html  e2_pure_prop_deleted_taxon.html  g_most_edit_wars_classes.html  g_most_edit_wars_entities.html  (+2 more)
notebooks/output/4_model_evaluation/: evaluation_supervised.csv  evaluation_unsupervised.csv  evaluation_unsupervised_2.csv
scripts/: Dockerfile  download_dumps.sh  run_all.sh
scripts/edit_history/: Dockerfile  download_dumps.sh  run_all.sh
scripts/edit_history/diff_indexer/: Cargo.toml
scripts/edit_history/diff_indexer/src/: main.rs  model.rs
scripts/edit_history/elasticsearch_indexer/: Cargo.toml
scripts/edit_history/elasticsearch_indexer/src/: main.rs
scripts/edit_history/wd_diff_calculator/: Cargo.toml
scripts/wd_diff_calculator/: Cargo.toml
scripts/wd_diff_calculator/src/: main.rs
src/: kg_model.py
(+12 files in other folders)
