[package]
name = "diff_indexer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.0.13", features = ["derive"] }
http = "0.2.6"
indicatif = "*"
mongodb = "2.1.0"
serde_json = "1.0"
tokio = { version = "*", features = ["full"] }
url = "2.2.2"