[package]
name = "diff_indexer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.0.13", features = ["derive"] }
csv = "1.1"
http = "0.2.6"
indicatif = "*"
json-patch = "*"
mongodb = "2.1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "*", features = ["full"] }
url = "2.2.2"