[package]
name = "elasticsearch_indexer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.0.13", features = ["derive"] }
elasticsearch = "7.14.0-alpha.1"
http = "0.2.6"
indicatif = "*"
serde_json = "1.0"
tokio = { version = "*", features = ["full"] }
url = "2.2.2"